rusty-cdk-macros/tests/fails/lifecycle_object_sizes_first_larger_than_second.rs
use rusty_cdk_macros::lifecycle_object_sizes;

fn example() {
    let sizes = lifecycle_object_sizes!(10000, 5000);
}

fn main() {}
