rusty-cdk-macros/tests/fails/lifecycle_object_sizes_first_larger_than_second.stderr
error: first number (10000) in `lifecycle_object_sizes` should be smaller than second (5000)
 --> tests/fails/lifecycle_object_sizes_first_larger_than_second.rs:4:17
  |
4 |     let sizes = lifecycle_object_sizes!(10000, 5000);
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `lifecycle_object_sizes` (in Nightly builds, run with -Z macro-backtrace for more info)
